# codys

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  conanfile.py  conanfile.txt  lgtm.yml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
include/: CMakeLists.txt
include/codys/: Concepts.hpp  Derivative.hpp  Distinct_Tuple.hpp  Operators.hpp  Quantity.hpp  State.hpp  StateSpaceSystem.hpp  System.hpp  Unique_Tuple.hpp  codys.hpp  set_of_types.hpp  tuple_like.hpp  tuple_utilities.hpp
src/: CMakeLists.txt  Concepts.hpp  Derivative.hpp  Operators.hpp  State.hpp  StateSpaceSystem.hpp  System.hpp  codys.hpp  main.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp  validation.cpp
